--- a/requirements.txt
+++ b/requirements.txt
@@ -3,17 +3,18 @@
 
 # Flask Framework
 click==7.1.2
-Flask==2.0.2
+Flask==2.0.0
 itsdangerous==2.0.1
 Jinja2==3.0.0
 MarkupSafe==2.0.0rc2
-Werkzeug==2.0.0
+Werkzeug==0.16.0
 
 # Flask Packages
+SQLAlchemy==1.4
 Flask-Login==0.4.0
 Flask-Migrate==2.0.2
 Flask-Script==2.0.5
-Flask-SQLAlchemy==2.4.0
+Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.14.2
 Flask-User==1.0.1.5
 
