--- a/requirements.txt
+++ b/requirements.txt
@@ -2,22 +2,22 @@
 # Usage: pip install -r requirements.txt
 
 # Flask Framework
-click==7.1.2
-Flask==2.0.0
-itsdangerous==2.0.1
-Jinja2==3.0.0
-MarkupSafe==2.0.0rc2
-Werkzeug==0.16.0
+click==8.1.7
+Flask==2.3.3
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+Werkzeug==2.3.7
 
 # Flask Packages
-SQLAlchemy==1.4
-Flask-Login==0.4.0
-Flask-Migrate==2.0.2
-Flask-Script==2.0.5
-Flask-SQLAlchemy==2.5.1
-Flask-WTF==0.14.2
-Flask-User==1.0.1.5
+SQLAlchemy==2.0.20
+Flask-Login==0.6.2
+Flask-Migrate==4.0.4
+Flask-Script==2.0.6
+Flask-SQLAlchemy==3.0.5
+Flask-WTF==1.1.1
+Flask-User==1.0.2.2
 
 # Automated tests
-pytest==3.0.5
-pytest-cov==2.4.0
+pytest==7.4.2
+pytest-cov==4.1.0
